2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* MakeHelper.pm (postamble_docs_full): When constructing the
	add_types call, make sure to properly quote the paths.  (Patch by
	Andres König)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;
	so automatic CPAN testers know which perl version we need.  Also
	get rid of the MY package by prefixing the relevant subs with
	`MY::´.

2007-10-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GObject.xs (Glib::Object::CLONE): Check that perl_gobjects !=
	NULL before working with it, to avoid an assertion.

2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm
	* t/make_helper.t: Add
	Glib::MakeHelper::get_configure_requires_yaml to generate YAML
	suitable for use with EU::MM's EXTRA_META.

	* Makefile.PL: Use the above to tell EU::MM to generate a correct
	configure_requires entry.  Also output a no_index entry to tell
	the CPAN indexer what to ignore.

2007-09-24	kaffeetisch

	* CodeGen.pm
	* GenPod.pm
	* MakeHelper.pm
	* Makefile.PL: Prettify build output by summarizing what is done
	instead of printing executed command lines, and by removing
	unnecessarily verbose output.  Use `make NOECHO=" "´ if you want
	to see the command lines.

	* MakeHelper.pm: Implement custom Makefile rule generators in MY
	that print stuff like [ XS File.xs ] instead of the overly long
	command lines.  Again, use `make NOECHO=" "´ if you want to see
	the command lines.

2007-09-16	kaffeetisch

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-15	kaffeetisch

	* GKeyFile.xs
	* GMainLoop.xs
	* GUtils.xs
	* gperl.h
	* t/1.t
	* t/9.t
	* t/g.t: Change version checks to refer to glib 2.14 instead of
	2.13.

2007-08-13	kaffeetisch

	* Glib.pm
	* NEWS
	* README: Unstable release 1.153.

2007-08-13	kaffeetisch

	* GMainLoop.xs
	* GObject.xs
	* GType.xs
	* GenPod.pm: Output a warning if a type name isn't recognized by